--- a/spec/fixtures/vcr_cassettes/mp3_upload.yml
+++ b/spec/fixtures/vcr_cassettes/mp3_upload.yml
@@ -12,7 +12,7 @@ http_interactions:
       Content-Type:
       - multipart/form-data; boundary=-----------RubyMultipartPost
       Content-Length:
-      - '58904'
+      - '7318840'
   response:
     status:
       code: 200
@@ -21,7 +21,7 @@ http_interactions:
       Server:
       - nginx/1.11.1
       Date:
-      - Sun, 19 Jun 2016 14:27:32 GMT
+      - Thu, 25 Aug 2016 04:41:17 GMT
       Content-Type:
       - text/javascript; charset=utf-8
       Transfer-Encoding:
@@ -36,7 +36,7 @@ http_interactions:
     body:
       encoding: UTF-8
       string: "{\n    \"result\": {\n        \"message\": \"Uploaded test\", \n        \"key\":
-        \"/datafruits/test/\", \n        \"success\": true\n    }\n}"
+        \"/freedrool/test/\", \n        \"success\": true\n    }\n}"
     http_version: 
-  recorded_at: Sun, 19 Jun 2016 14:27:33 GMT
+  recorded_at: Thu, 25 Aug 2016 04:41:18 GMT
 recorded_with: VCR 3.0.3
